<?xml version="1.0" encoding="utf-8"?>
<com.jkcarino.rtexteditorview.RTextEditorToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editor_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/editor_background"
    android:gravity="center">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/editor_flex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flexWrap="wrap">

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/show_spinner"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@mipmap/ic_spinner_up" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/hide_spinner"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@mipmap/ic_spinner_down" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/undo_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_undo" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/redo_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_redo" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/bold_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_bold" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/italic_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_italic" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/underline_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_underlined" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/strike_through_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_strike_through" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_remove_format"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_clear"
            app:toolType="removeFormat" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/clear_button"
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_clear" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            style="@style/editor_button"
            android:contentDescription="@string/desc_main"
            app:srcCompat="@drawable/ic_format_normal"
            app:toolType="normal" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/heading_spinner"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@drawable/spinner_editor_background"
            android:contentDescription="@string/desc_heading" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_superscript"
            style="@style/editor_button"
            android:contentDescription="@string/desc_sub"
            app:srcCompat="@drawable/ic_format_superscript" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_subscript"
            style="@style/editor_button"
            android:contentDescription="@string/desc_sub"
            app:srcCompat="@drawable/ic_format_subscript" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_text_color"
            style="@style/editor_button"
            android:contentDescription="@string/desc_color"
            app:srcCompat="@drawable/ic_format_color_text" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_fill_color"
            style="@style/editor_button"
            android:contentDescription="@string/desc_color"
            app:srcCompat="@drawable/ic_format_color_fill" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_unordered"
            style="@style/editor_button"
            android:contentDescription="@string/des_list"
            app:srcCompat="@drawable/ic_format_list_bullet_list" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_ordered"
            style="@style/editor_button"
            android:contentDescription="@string/des_list"
            app:srcCompat="@drawable/ic_format_list_numbered" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_align_left"
            style="@style/editor_button"
            android:contentDescription="@string/desc_align"
            app:srcCompat="@drawable/ic_format_align_left" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_align_center"
            style="@style/editor_button"
            android:contentDescription="@string/desc_align"
            app:srcCompat="@drawable/ic_format_align_center" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_align_right"
            style="@style/editor_button"
            android:contentDescription="@string/desc_align"
            app:srcCompat="@drawable/ic_format_align_right" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_align_justify"
            style="@style/editor_button"
            android:contentDescription="@string/desc_align"
            app:srcCompat="@drawable/ic_format_align_justify" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_indent"
            style="@style/editor_button"
            android:contentDescription="@string/desc_indent"
            app:srcCompat="@drawable/ic_format_indent_increase" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_out_dent"
            style="@style/editor_button"
            android:contentDescription="@string/desc_indent"
            app:srcCompat="@drawable/ic_format_indent_decrease" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_table"
            style="@style/editor_button"
            android:contentDescription="@string/desc_table"
            app:srcCompat="@drawable/ic_insert_table" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_link"
            style="@style/editor_button"
            android:contentDescription="@string/desc_link"
            app:srcCompat="@drawable/ic_insert_link" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_unlink"
            style="@style/editor_button"
            android:contentDescription="@string/desc_link"
            app:srcCompat="@drawable/ic_insert_link_off" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            style="@style/editor_button"
            android:contentDescription="@string/desc_view_code"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_view_code"
            app:toolType="editHtml" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_horizontal_rule"
            style="@style/editor_button"
            android:contentDescription="@string/desc_horizontal_rule"
            app:srcCompat="@drawable/ic_insert_line"
            app:toolType="horizontalRule" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_block_quote"
            style="@style/editor_button"
            android:contentDescription="@string/desc_block_quote"
            app:srcCompat="@drawable/ic_format_quote"
            app:toolType="blockQuote" />

        <com.jkcarino.rtexteditorview.RTextEditorButton
            android:id="@+id/button_format_code"
            style="@style/editor_button"
            android:contentDescription="@string/desc_format_code"
            app:srcCompat="@drawable/ic_format_code" />
    </com.google.android.flexbox.FlexboxLayout>
</com.jkcarino.rtexteditorview.RTextEditorToolbar>
